# JSEG-CUDA-segmentation

./: .gitignore  CMakeLists.txt  JSEG.cpp  JSEG_CPU.h  JSEG_kernel.cu  JSEG_kernel.h  README.md  deviceQuery.h  matrix.h  matrix_cuda.h
